Remove google talk ref

--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
 </header>
 
 <div id="page">
-
   <article class="aligncenter">
     <div class="content">
-      <p>I&#8217;m a full-stack web developer.</p>
+    <p>I&#8217;m a full-stack web developer.</p>
 
-<p>Contact me by email or Google Talk: <a href="mailto:bjorn.maeland@gmail.com">bjorn.maeland@gmail.com</a>.</p>
-
-<p>Find me on:</p>
-<ul>
-<li><a title="bmaland on Delicious" href="http://delicious.com/bmaland">Delicious</a></li>
-<li><a title="bmaland on GitHub" href="http://github.com/bmaland">GitHub</a></li>
-<li><a title="bmaland on LinkedIn" href="http://www.linkedin.com/pub/bj%C3%B8rn-arild-m%C3%A6land/18/105/697">LinkedIn</a></li>
-<li><a title="bmaland on Twitter" href="http://twitter.com/bmaland">Twitter</a></li>
-</ul>
-    </article>
+    <p>Contact me by email: bjorn.maeland at gmail.com</p>
+    
+    <p>Find me on:</p>
+    <ul>
+      <li><a title="bmaland on Delicious" href="http://delicious.com/bmaland">Delicious</a></li>
+      <li><a title="bmaland on GitHub" href="http://github.com/bmaland">GitHub</a></li>
+      <li><a title="bmaland on LinkedIn" href="http://www.linkedin.com/pub/bj%C3%B8rn-arild-m%C3%A6land/18/105/697">LinkedIn</a></li>
+      <li><a title="bmaland on Twitter" href="http://twitter.com/bmaland">Twitter</a></li>
+    </ul>
+  </article>
 </div>
 </div>
 </body>
 </html>
-
